--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "commonjs",
-    "target": "esnext",
+    "module": "ESNext",
+    "target": "ESNext",
     "types": [],
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -43,8 +43,11 @@
     "skipLibCheck": true,
 
     "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": false,
     "allowJs": true,
     "noImplicitAny": true,
-  }
+  },
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules", "html.*"],
+  "type": "module",
 }
